# fastfriday

./: Pipfile  README.md  main.py  pyproject.toml  pytest.ini  setup.py
__tests__/: __init__.py  conftest.py
__tests__/models/: test_EventTypeModel.py  test_LifeEventModel.py
__tests__/services/: test_EventTypeService.py  test_LifeEventService.py
configs/: Database.py  GraphQL.py
docs/: api-layer.md  application-services.md  architecture.md  domain-models.md
metadata/: Tags.py
models/: BaseModel.py  EventTypeModel.py  LifeEventModel.py
planning/: brand-todo.md
py.typed/strawberry/: __init__.py  __init__.pyi
py.typed/strawberry/federation/: __init__.pyi
py.typed/strawberry/lazy_type/: __init__.py
py.typed/strawberry/scalars/: __init__.py  __init__.pyi
py.typed/strawberry/type/: __init__.py  __init__.pyi  lazy.py  lazy.pyi
repositories/: EventTypeRepository.py  LifeEventRepository.py  RepositoryMeta.py
routers/v1/: EventRouter.py  EventTypeRouter.py
schemas/graphql/: Query.py  __init__.py  mutations.py
schemas/graphql/types/: models.py
schemas/pydantic/: EventTypeSchema.py  LifeEventSchema.py
seeds/: event_types.py
services/: EventTypeService.py  LifeEventService.py
