[project]
name = "friday"
version = "1.0.0"
description = "Your Personal Life Logger API - Record and analyze your daily life events"
authors = [
    {name = "Narayan", email = ""}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["life-logger", "personal-analytics", "fastapi", "graphql"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 60

[tool.isort]
profile = "black"
src_paths = ["configs", "core", "dependencies", "models", "repositories", "routers", "schemas", "services"]
virtual_env = "env"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
  "__tests__"
]
